# flappy_bird

./: pyproject.toml
src/: game.py
src/gameobjects/: pipes.py  player.py
src/utils/: group.py  resourcemanager.py  settings.py
